@@ -469,6 +469,24 @@ name|void
 name|run
 parameter_list|()
 block|{
+try|try
+block|{
+name|context
+operator|.
+name|setStatus
+argument_list|(
+literal|"Closing"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+return|return;
+block|}
 while|while
 condition|(
 operator|!
@@ -479,10 +497,8 @@ try|try
 block|{
 name|context
 operator|.
-name|setStatus
-argument_list|(
-literal|"closing"
-argument_list|)
+name|progress
+argument_list|()
 expr_stmt|;
 name|Thread
 operator|.
